examples/invalid/wrongParameters.ccs
X[channel,message] := channel!message.do.something.X[message,message];

X[out,0]
